embedded-interfaces/tests/compile_fail/enum_wrong_underlying.stderr
error: unsupported underlying type for enum
 --> tests/compile_fail/enum_wrong_underlying.rs:3:21
  |
3 |     enum Bad: i8{3} {
  |                     ^
